# binary_search

./: bin.py  data.py  lin.py  main.py  plot.py  plotter.py  pyproject.toml
